fix: adjust font sizes for text classes to improve readability

--- a/themes/tella/assets/css/style.css
+++ b/themes/tella/assets/css/style.css
@@ -3474,17 +3474,17 @@ video {
 }
 
 .text-3xl {
-  font-size: 1.875rem;
+  font-size: 1.575rem;
   line-height: 2.25rem;
 }
 
 .text-4xl {
-  font-size: 2.25rem;
+  font-size: 1.75rem;
   line-height: 2.5rem;
 }
 
 .text-5xl {
-  font-size: 3rem;
+  font-size: 2rem;
   line-height: 1;
 }
 
